IGNITE-11461: Automatic modules support for Apache Ignite: compiled using gradle