@@ -30,13 +30,26 @@ ext {
     ignVer = '2.7.0'
 }
 
-ext.moduleName = 'org.apache.ignite.ignite_modules_test'
+ext.moduleName = 'ignite_modules_test'
 
 compileJava {
     inputs.property("moduleName", moduleName)
     doFirst {
         options.compilerArgs = [
             '--module-path', classpath.asPath,
+        ];
+        classpath = files();
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'junit',
+            '--add-reads', "$moduleName=junit",
+            '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
         ]
         classpath = files()
     }
